--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <li>contacto</li>
         <li>telefono</li>
     </ul>
+    <img src="assets/imagenes/Python-logo-notext.svg.png" alt="logo">
 </body>
 </html>
